--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ body{
 .bg{
     text-align: center;
     color: white;
-    background-image: url(/img/bg.jpg);
+    background-image: url(../img/bg.jpg);
     background-size: cover;
     background-position: center center;
     padding: 142px 0;
