--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ header{
     background-size: cover;
     background-position: center center;
     padding: 100px 100px 120px 100px;
-    margin-bottom: 40px;
+    margin-bottom: 100px;
     color: white;
 }
 .banner-title{
@@ -192,4 +192,95 @@ header{
 .banner-link:hover{
     background-color: transparent;
     border: 1px solid #FBB731;
+}
+.menu-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 34px;
+}
+.menu-title{
+    text-transform: uppercase;
+    color: #1B2A49;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 700;
+    line-height: 56px;
+    font-size: 44px;
+    margin: 0;
+}
+.menu-select{
+    border: 1px solid #DEDEDE;
+    border-radius: 22px;
+    padding: 10px 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    line-height: 24px;
+    color: #443737;
+    appearance: none;
+    flex-basis: 279px;
+    background-image: url(../img/arrow.svg);
+    background-size: 12.79px 7.77px;
+    background-repeat: no-repeat;
+    background-position: 90% center;
+}
+.menu-grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 50px 20px;
+    margin-bottom: 100px;
+}
+.menu-grid-cover{
+    width: 100%;
+    height: 430px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+.menu-grid-cover img{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    width: 100$;
+    height: 430px;
+}
+.menu-grid-item{
+    text-align: center;
+}
+.meni-grid-title{
+    font-family: 'Nunito Sans', sans-serif;
+    color: #1B2A49;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 38px;
+    margin-top: 0;
+    margin-bottom: 5px; 
+}
+.meni-grid-price{
+    color: #979797;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    margin: 0;
+    margin-bottom: 18px;
+}
+.menu-grid-btn{
+    background-color: #FBB731;
+    border: 0;
+    border-radius: 5px;
+    padding: 9px 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    gap: 12px;
+}
+.menu-grid-text{
+    font-family: 'Nunito Sans', sans-serif;
+    text-transform: uppercase;
+    color: #1E2F40;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 700;
 }
