--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ header{
     font-weight: 600;
     font-size: 20px;
     text-decoration: none;
+    transition: 0.3s;
 }
 .header-nav a:hover{
     color: #FFC725;
@@ -113,6 +114,7 @@ header{
     color: #DEDEDE;
     text-decoration: none;
     font-size: 15px;
+    transition: 0.3s;
 }
 .breadcrumbs a:hover{
     color: #FFC725;;
@@ -150,7 +152,7 @@ header{
     background-size: cover;
     background-position: center center;
     padding: 100px 100px 120px 100px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     color: white;
 }
 .banner-title{
@@ -192,11 +194,15 @@ header{
     padding: 18px 24px;
     border-radius: 5px;
     border: 1px solid #FBB731;
+    transition: 0.2s;
 }
 .banner-link:hover{
     background-color: transparent;
     border: 1px solid #FBB731;
     color: #FBB731;
+}
+.menu{
+    padding-top: 20px ;
 }
 .menu-header{
     display: flex;
@@ -280,6 +286,7 @@ header{
     align-items: center;
     margin: 0 auto;
     gap: 12px;
+    transition: 0.2s;
 }
 .menu-grid-btn:hover{
     background-color: #F37335;
@@ -331,6 +338,7 @@ header{
     color: #DEDEDE;
     text-decoration: none;
     font-weight: 400;
+    transition: 0.2s;
 }
 .footer-item span {
     color: #DEDEDE;
@@ -359,6 +367,32 @@ header{
 }
 .footer-list-tel li a:hover{
     color: white;
+}
+
+.button-up{
+    background-color: #FBB731;
+    font-family: "Nunito Sans", sans-serif;
+    text-transform: uppercase;
+    color: rgb(30, 47, 64);
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 5px 20px ;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    transition: .3s;
+    border-radius: 5px;
+}
+.button-up.hidden{
+    opacity: 0;
+}
+.button-up.visivle{
+    opacity: 1;
+}
+.button-up:hover{
+    background-color: #F37335;
 }
 /* style index*/
 
