--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ header{
     background-image: url(../img/banner-box.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: 0 center;
     padding: 100px 100px 120px 100px;
     margin-bottom: 80px;
     color: white;
@@ -299,6 +299,12 @@ header{
     font-size: 14px;
     line-height: 18px;
     font-weight: 700;
+}
+.additional-menu-grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 50px 20px;
+    margin-bottom: 100px;
 }
 .footer {
     background: #1E2F40;
@@ -520,4 +526,55 @@ header{
     font-weight: 700;
     margin-bottom: 10px;
     margin-top: 0;
+}
+/* adaptive */
+
+@media (max-width: 1000px){
+    .content{
+        max-width: 738px;
+    }
+    .header-logo{
+        width: 150px;
+        height: 48px;
+        background-size: contain;
+    }
+    .header-nav{
+        gap:20px;
+    }
+    .header-items{
+        flex-basis: 75.5% ;
+    }
+    .bg{
+        margin-bottom: 72px;
+    }
+    .banner-box{
+        padding: 100px 40px;
+        background-position: -80px center;
+    }
+    .menu-grid{
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px 15px;
+    }
+    .footer-box{
+        gap:0px 70px;
+        width: 756px;
+        flex-wrap: wrap;
+    }
+    .footer-item:nth-child(2){
+        width: 255px;
+    }
+    .footer-item:nth-child(3){
+        width: 282px;
+    }
+    .footer-list-tel{
+        margin-left: 150px;
+    }
+    .menu-grid {
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px 15px;
+    }
+    .additional-flex{
+        grid-template-columns:repeat(3,307px);
+        gap: 6px;
+    }
 }
