--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,6 @@ header{
     color: #1B2A49;
     font-weight: 600;
     font-size: 30px;
-    line-height: 38px;
     margin-top: 0;
     margin-bottom: 5px; 
 }
@@ -527,7 +526,58 @@ header{
     margin-bottom: 10px;
     margin-top: 0;
 }
+/*modal*/
+
+.burger{
+    width: 34px;
+    height: 22px;
+    background-image: url(../img/burger.svg);
+    background-repeat: no-repeat;
+    background-size: contain ;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.modal{
+    background-color: #FFF8DC;
+    max-width: 500px;
+    text-align: center;
+    position: absolute;
+    top: -400px;
+    left: 0;;
+    right: 0;
+    margin: 20px auto 0;
+    padding: 40px 30px;
+    box-sizing: border-box;
+    transition: .5s;
+}
+.modal .header-nav{
+    flex-direction: column;
+    align-items: center;
+    gap: 23px;
+    padding: 0;
+    margin: 0;
+}
+.burger-close{
+    width: 22px;
+    height: 22px;
+    background-image: url(../img/close.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
 /* adaptive */
+
+@media (min-width: 766px){
+    .header-burger{
+        display: none;
+    }
+}
 
 @media (max-width: 1000px){
     .content{
@@ -573,8 +623,141 @@ header{
         grid-template-columns: repeat(2,1fr);
         gap: 50px 15px;
     }
+    .additional-menu{
+        overflow: hidden;
+        height: 558px;
+    }
     .additional-flex{
         grid-template-columns:repeat(3,307px);
         gap: 6px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        height: 558px;
+    }
+    .additional-flex .menu-grid-cover{
+        height: 320px;
+    }
+}
+@media (max-width: 765px){
+    nav{
+        display: none;
+    }
+    .header{
+        gap:21px;
+    }
+}
+@media (max-width:567px){
+    .title{
+        font-size: 38px;
+    }
+    .breadcrumbs{
+        font-size: 14px;
+    }
+    .description{
+        font-size: 12px;
+    }
+    .bg{
+        padding: 55px 0;
+    }
+    .banner-box{
+        background-position: 17% center;
+        padding: 35px 54px;
+    }
+    .menu-select{
+        background-position: 90% center;
+        max-width: 180px;
+    }
+    .meni-grid-title{
+        font-size: 20px;
+    }
+    .menu-grid-cover{
+        height: 240px;
+        margin-bottom: 10px;
+    }
+    .additional-flex{
+        grid-template-columns:repeat(3,206px);
+        gap: 6px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        height: 558px;
+    }
+    .additional-flex .menu-grid-cover{
+        height: 240px;
+    }
+    .footer{
+        padding-top: 40px;
+        margin-top: 50px;
+    }
+    .footer-box{
+        flex-direction: column;
+
+    }
+    .footer-tel{
+        order: -1;
+    }
+    .footer-list-tel{
+        margin-left: 0;
+    }
+}
+@media (max-width: 414px){
+    .banner-box{
+        background-position: 17% center;
+    }
+    .menu-select{
+        padding: 8px 31px 8px 8px;
+        max-width: 120px;
+        font-size: 12px;
+    }
+    .meni-grid-title{
+        font-size: 16px;
+    }
+}
+@media (max-width: 360px){
+    .header-logo{
+        width: 116px;
+        height: 37px;
+        background-size: contain;
+    }
+}
+@media (max-width: 320px){
+    .header{
+        margin-bottom: 0;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .banner-box{
+        background-position: 25% center;
+        padding: 35px 28px 34px 15px;
+    }
+    .bg{
+        margin-bottom: 33px;
+    }
+    .menu-title{
+        font-size: 27px;
+    }
+    .menu-select{
+        padding: 8px 31px 8px 8px;
+        max-width: 120px;
+        font-size: 12px;
+    }
+    .menu-grid-cover{
+        height: 180px;
+        margin-bottom: 10px;
+    }
+    .meni-grid-title{
+        font-size: 13px;
+    }
+    .meni-grid-price{
+        font-size: 16px ;
+        margin-bottom: 8px ;
+    }
+    .menu-grid-btn{
+        padding: 10px 21px ;
+    }
+    .menu-grid{
+        margin-bottom: 50px;
+    }
+    .additional-flex .menu-grid-cover{
+        height: 180px;
     }
 }
