--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,9 @@ header{
     font-size: 15px;
     line-height: 24px;
     color: #443737;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     flex-basis: 279px;
     background-image: url(../img/arrow.svg);
     background-size: 12.79px 7.77px;
@@ -252,7 +254,8 @@ header{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 430px;
 }
